@@ -1,4 +1,5 @@
 uqm_CFILES="3do_blt.c 3do_funcs.c 3do_getbody.c dcqueue.c opengl.c
+		palette.c
 		primitives.c pure.c rndzoom.c sdl_common.c
 		scalers.c 2xscalers.c
 		2xscalers_mmx.c 2xscalers_sse.c 2xscalers_3dnow.c
