@@ -43,6 +43,7 @@
 #include "libs/log.h"
 #include "libs/gfxlib.h"
 #include "libs/graphics/gfx_common.h"
+#include "libs/graphics/tfb_draw.h"
 #include "libs/misc.h"
 
 #include "uqmversion.h"
